# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: python-ci.yml
page_analyzer/: app.py
page_analyzer/css/: main.css
page_analyzer/templates/: home.html  index.html  url.html  urls.html
page_analyzer/templatest/: main.html
templates/: index.html
